# minimal-fastapi

./: Readme.md  poetry.toml  pyproject.toml
