[tool.poetry]
name = "testfastapi"
version = "0.1.0"
description = ""
authors = ["Rémi Benoit <r3m1.benoit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
netifaces = "^0.11.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
hypercorn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
